--- a/src/content/once-ui/basics/structure.mdx
+++ b/src/content/once-ui/basics/structure.mdx
@@ -23,7 +23,8 @@ Once UI layouts are built using `Flex` and `Grid`, prop-based abstractions over 
   {Array(6)
     .fill(null)
     .map((_, index) => (
-      <Background 
+      <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         key={index}
         shadow="m"
@@ -40,28 +41,32 @@ Once UI layouts are built using `Flex` and `Grid`, prop-based abstractions over 
 We expose two convenience wrappers: `Row` and `Column`. These are semantically expressive `Flex` elements with pre-set directions. Use them instead of the `Flex` for better semantics and code quality.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Row fillWidth gap="16" mobileDirection="column" textVariant="label-default-s" onBackground="neutral-weak">
-      <Background 
+      <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fillWidth center border="neutral-alpha-medium" radius="m" padding="16">
           col
       </Background>
       <Column fill gap="16">
-        <Background 
+        <Background
+          background="neutral-alpha-weak"
           lines={{display: true, color: "neutral-alpha-weak"}}
           fill center border="neutral-alpha-medium" radius="m" padding="16">
             row
         </Background>
-        <Background 
+        <Background
+          background="neutral-alpha-weak"
           lines={{display: true, color: "neutral-alpha-weak"}}
           fill center border="neutral-alpha-medium" radius="m" padding="16">
             row
         </Background>
       </Column>
-      <Background 
+      <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fillWidth center border="neutral-alpha-medium" radius="m" padding="16">
           col
@@ -100,21 +105,24 @@ We expose two convenience wrappers: `Row` and `Column`. These are semantically e
 Rather than wrestling with `justifyContent` and `alignItems`, we use semantic `horizontal` and `vertical` props that auto-adjust based on direction.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Column fillWidth gap="16">
       <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fillWidth minHeight={10} padding="16" radius="m" border="neutral-alpha-medium">
         <Button size="s" data-border="rounded">Continue</Button>
       </Background>
       <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fillWidth center minHeight={10} padding="16" radius="m" border="neutral-alpha-medium">
         <Button size="s" data-border="rounded">Continue</Button>
       </Background>
       <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fillWidth horizontal="end" vertical="end" minHeight={10} padding="16" radius="m" border="neutral-alpha-medium">
         <Button size="s" data-border="rounded">Continue</Button>
@@ -145,17 +153,19 @@ The `start` is the default value for both alignments, so we don't declare them. 
 We can also use `space-around` and `space-between` values for the alignment props:
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Column fillWidth gap="16">
       <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fillWidth horizontal="space-between" padding="16" radius="m" border="neutral-alpha-medium">
         <IconButton icon="chevronLeft" variant="secondary" data-border="rounded"/>
         <Button size="s" data-border="rounded">Continue</Button>
       </Background>
       <Background
+        background="neutral-alpha-weak"
         lines={{display: true, color: "neutral-alpha-weak"}}
         direction="column" minHeight={16} fillWidth horizontal="center" vertical="space-around" padding="16" radius="m" border="neutral-alpha-medium">
         <IconButton icon="chevronLeft" variant="secondary" data-border="rounded"/>
@@ -188,17 +198,19 @@ Use the `fillWidth`, `fillHeight`, or shorthand `fill` to fill up the remaining 
 Use `fit`, `fitWidth`, `fitHeight` to apply `fit-content`.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Column fillWidth horizontal="center" gap="16">
       <Background
+        background="neutral-alpha-weak"
         border="neutral-alpha-medium" radius="m" padding="16"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fit>
         <Button size="s" data-border="rounded">Continue</Button>
       </Background>
       <Background
+        background="neutral-alpha-weak"
         horizontal="center" border="neutral-alpha-medium" radius="m" padding="16"
         lines={{display: true, color: "neutral-alpha-weak"}}
         fillWidth fitHeight>
@@ -209,10 +221,10 @@ Use `fit`, `fitWidth`, `fitHeight` to apply `fit-content`.
   codeInstances={[
     {
       code:
-`<Column fit background="overlay">
+`<Column fit>
     <Button>Continue</Button>
 </Column>
-<Column fillWidth fitHeight horizontal="center" background="overlay">
+<Column fillWidth fitHeight horizontal="center">
     <Button>Continue</Button>
 </Column>
 `,
@@ -222,19 +234,73 @@ Use `fit`, `fitWidth`, `fitHeight` to apply `fit-content`.
   ]}
 />
 
+Use the `flex` prop to create asymmetric space distributions, like a bento grid:
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column fillWidth gap="16">
+      <Row fillWidth gap="16" mobileDirection="column">
+        <Background
+          height={8}
+          flex="2"
+          background="neutral-alpha-weak" border="neutral-alpha-medium" radius="m"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+        <Background
+          height={8}
+          flex="3"
+          background="neutral-alpha-weak" border="neutral-alpha-medium" radius="m"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+      </Row>
+      <Row fillWidth gap="16" mobileDirection="column">
+        <Background
+          height={8}
+          flex="3"
+          background="neutral-alpha-weak" border="neutral-alpha-medium" radius="m"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+        <Background
+          height={8}
+          flex="2"
+          background="neutral-alpha-weak" border="neutral-alpha-medium" radius="m"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+      </Row>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Column fillWidth gap="16">
+    <Row fillWidth gap="16" mobileDirection="column">
+      <Row flex="2" height={8}/>
+      <Row flex="3" height={8}/>
+    </Row>
+    <Row fillWidth gap="16" mobileDirection="column">
+      <Row flex="3" height={8}/>
+      <Row flex="2" height={8}/>
+    </Row>
+</Column>`,
+      language: "tsx",
+      label: "Flex"
+    }
+  ]}
+/>
+
 You can also use `maxWidth`, `minHeight`, and `aspectRatio`. `maxWidth` will also apply `fillWidth`.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Column fitHeight fillWidth horizontal="center" gap="16" align="center" onBackground="neutral-weak" textVariant="label-default-s">
       <Background maxWidth={20}
+        background="neutral-alpha-weak"
         center border="neutral-alpha-medium" radius="m" padding="16"
         lines={{display: true, color: "neutral-alpha-weak"}}>
         maxWidth: 20
       </Background>
       <Background
+        background="neutral-alpha-weak"
         center border="neutral-alpha-medium" radius="m" padding="16"
         lines={{display: true, color: "neutral-alpha-weak"}}
         aspectRatio="16/9">
@@ -246,10 +312,10 @@ You can also use `maxWidth`, `minHeight`, and `aspectRatio`. `maxWidth` will als
     {
       code:
 `<Column maxWidth={20}>
-    maxWidth={20}
+    maxWidth: 20
 </Column>
 <Column fillWidth aspectRatio="16/9">
-    aspectRatio="16 / 9"
+    aspectRatio: 16 / 9
 </Column>
 `,
       language: "tsx",
@@ -263,8 +329,8 @@ You can also use `maxWidth`, `minHeight`, and `aspectRatio`. `maxWidth` will als
 Use the `background` and `solid` props to apply colors, and the `onBackground` and `onSolid` props respectively to apply text colors.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
   <Flex fillWidth gap="l" mobileDirection="column">
     <Column
@@ -329,8 +395,8 @@ Use the `background` and `solid` props to apply colors, and the `onBackground` a
 The `solid` prop is commonly used for interactive element backgrounds, such as the button and checkbox.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
   <Flex fillWidth gap="l" mobileDirection="column">
     <Column
@@ -415,8 +481,8 @@ The `solid` prop is commonly used for interactive element backgrounds, such as t
 The `alpha` properties let you design subtle backgrounds and overlays.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
   <Flex fillWidth gap="l" mobileDirection="column">
     <Column
@@ -505,8 +571,8 @@ The `surface` background and border property allows you to style elements differ
 The surface properties are designed for large layout container elements such as headers or sidebars.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
   <Flex 
     data-surface="filled" fillWidth gap="l" mobileDirection="column">
@@ -611,19 +677,22 @@ The surface properties are designed for large layout container elements such as 
 Use utility props to apply spacing consistently, such as the `padding`, `paddingX`, `marginTop`, etc. Values can be [spacing tokens](/once-ui/basics/spacing) or numbers (converted to `rem`). Use the `gap` to set the internal spacing between children.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Column fillWidth>
       <Background fillWidth height="48"
+        background="neutral-alpha-weak"
         border="neutral-alpha-medium" radius="m" padding="16"
         lines={{display: true, color: "neutral-alpha-weak"}}/>
       <Column fillWidth paddingX="xl" paddingY="24" gap="40" marginTop="40"
         border="neutral-alpha-medium" radius="m">
         <Background fillWidth height="64"
+          background="neutral-alpha-weak"
           border="neutral-alpha-medium" radius="m" padding="16"
           lines={{display: true, color: "neutral-alpha-weak"}}/>
         <Background fillWidth height="64"
+          background="neutral-alpha-weak"
           border="neutral-alpha-medium" radius="m" padding="16"
           lines={{display: true, color: "neutral-alpha-weak"}}/>
       </Column>
@@ -650,11 +719,12 @@ Use utility props to apply spacing consistently, such as the `padding`, `padding
 Apply borders using the `border`, `borderWidth` and `borderStyle` props. Since most borders are 1px solid, this will be the default if not specified. Border naming follows the same color naming as `background` and `solid`.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Row fillWidth gap="24" wrap horizontal="center">
       <Background
+        background="success-alpha-weak"
         lines={{display: true, color: "success-alpha-medium"}}
         border="success-medium"
         radius="full"
@@ -662,6 +732,7 @@ Apply borders using the `border`, `borderWidth` and `borderStyle` props. Since m
         width="64"
       />
       <Background
+        background="warning-alpha-weak"
         lines={{display: true, color: "warning-alpha-medium"}}
         border="warning-medium"
         borderWidth="2"
@@ -670,6 +741,7 @@ Apply borders using the `border`, `borderWidth` and `borderStyle` props. Since m
         width="64"
       />
       <Background
+        background="danger-alpha-weak"
         lines={{display: true, color: "danger-alpha-medium"}}
         border="danger-medium"
         borderWidth="2"
@@ -706,13 +778,14 @@ Apply borders using the `border`, `borderWidth` and `borderStyle` props. Since m
 Border radius convention follows the [extended T-shirt size model](/once-ui/basics/border).
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Flex fillWidth mobileDirection="column" gap="m">
       <Flex fillWidth padding="8" shadow="m" border="neutral-alpha-medium" radius="xs-8">
         <Flex fillWidth padding="4" border="neutral-alpha-medium" radius="xs-4">
           <Background
+            background="neutral-alpha-weak"
             lines={{display: true, color: "neutral-alpha-weak"}}
             fillWidth
             height={4}
@@ -724,6 +797,7 @@ Border radius convention follows the [extended T-shirt size model](/once-ui/basi
       <Flex fillWidth padding="8" shadow="m" border="neutral-alpha-medium" radius="s-8">
         <Flex fillWidth padding="4" border="neutral-alpha-medium" radius="s-4">
           <Background
+            background="neutral-alpha-weak"
             lines={{display: true, color: "neutral-alpha-weak"}}
             fillWidth
             height={4}
@@ -735,6 +809,7 @@ Border radius convention follows the [extended T-shirt size model](/once-ui/basi
       <Flex fillWidth padding="8" shadow="m" border="neutral-alpha-medium" radius="m-8">
         <Flex fillWidth padding="4" border="neutral-alpha-medium" radius="m-4">
           <Background
+            background="neutral-alpha-weak"
             lines={{display: true, color: "neutral-alpha-weak"}}
             fillWidth
             height={4}
@@ -746,6 +821,7 @@ Border radius convention follows the [extended T-shirt size model](/once-ui/basi
       <Flex fillWidth padding="8" shadow="m" border="neutral-alpha-medium" radius="l-8">
         <Flex fillWidth padding="4" border="neutral-alpha-medium" radius="l-4">
           <Background
+            background="neutral-alpha-weak"
             lines={{display: true, color: "neutral-alpha-weak"}}
             fillWidth
             height={4}
@@ -757,6 +833,7 @@ Border radius convention follows the [extended T-shirt size model](/once-ui/basi
       <Flex fillWidth padding="8" shadow="m" border="neutral-alpha-medium" radius="xl-8">
         <Flex fillWidth padding="4" border="neutral-alpha-medium" radius="xl-4">
           <Background
+            background="neutral-alpha-weak"
             lines={{display: true, color: "neutral-alpha-weak"}}
             fillWidth
             height={4}
@@ -772,37 +849,27 @@ Border radius convention follows the [extended T-shirt size model](/once-ui/basi
       code:
 `<Row radius="xs-8" padding="8">
     <Row radius="xs-4" padding="4">
-      <Row
-        radius="xs"
-      />
+      <Row radius="xs"/>
     </Row>
   </Row>
   <Row radius="s-8" padding="8">
     <Row radius="s-4" padding="4">
-      <Row
-        radius="s"
-      />
+      <Row radius="s"/>
     </Row>
   </Row>
   <Row radius="m-8" padding="8">
     <Row radius="m-4" padding="4">
-      <Row
-        radius="m"
-      />
+      <Row radius="m"/>
     </Row>
   </Row>
   <Row radius="l-8" padding="8">
     <Row radius="l-4" padding="4">
-      <Row
-        radius="l"
-      />
+      <Row radius="l"/>
     </Row>
   </Row>
   <Row radius="xl-8" padding="8">
     <Row radius="xl-4" padding="4">
-      <Row
-        radius="xl"
-      />
+      <Row radius="xl"/>
     </Row>
 </Row>`,
       language: "tsx",
@@ -811,17 +878,19 @@ Border radius convention follows the [extended T-shirt size model](/once-ui/basi
   ]}
 />
 
-You can also apply radius to specific sides or corners of a `Flex`.
+Apply radius to specific sides or corners of a `Flex`.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Row fillWidth horizontal="center" gap="4">
       <Background fillWidth height={4}
+        background="neutral-alpha-weak"
         border="neutral-alpha-medium" leftRadius="l" rightRadius="xs"
         lines={{display: true, color: "neutral-alpha-weak"}}/>
       <Background fillWidth height={4}
+        background="neutral-alpha-weak"
         border="neutral-alpha-medium" leftRadius="xs" rightRadius="l"
         lines={{display: true, color: "neutral-alpha-weak"}}/>
     </Row>
@@ -839,26 +908,30 @@ You can also apply radius to specific sides or corners of a `Flex`.
   ]}
 />
 
-We can define a `radius` and then override specific corners:
+Define a `radius` and then override it at specific corners:
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
     <Column fillWidth gap="4">
       <Row fillWidth horizontal="center" gap="4">
         <Background fillWidth height={4}
+          background="neutral-alpha-weak"
           border="neutral-alpha-medium" radius="xs" topLeftRadius="l"
           lines={{display: true, color: "neutral-alpha-weak"}}/>
         <Background fillWidth height={4}
+          background="neutral-alpha-weak"
           border="neutral-alpha-medium" radius="xs" topRightRadius="l"
           lines={{display: true, color: "neutral-alpha-weak"}}/>
       </Row>
       <Row fillWidth horizontal="center" gap="4">
         <Background fillWidth height={4}
+          background="neutral-alpha-weak"
           border="neutral-alpha-medium" radius="xs" bottomLeftRadius="l"
           lines={{display: true, color: "neutral-alpha-weak"}}/>
         <Background fillWidth height={4}
+          background="neutral-alpha-weak"
           border="neutral-alpha-medium" radius="xs" bottomRightRadius="l"
           lines={{display: true, color: "neutral-alpha-weak"}}/>
       </Row>
@@ -881,43 +954,174 @@ We can define a `radius` and then override specific corners:
   ]}
 />
 
-### Conditionals
+### Shadow
 
-You can use the `hide` and `show` props to conditionally render elements based on breakpoint.
+Use the `shadow` prop to apply box-shadows with the default T-shirt size model.
 
 <CodeBlock
-  marginTop="8"
-  marginBottom="16"
+  marginTop="16"
+  marginBottom="24"
   codePreview={
-    <>
-      <Background hide="m" fillWidth padding="24" center align="center" onBackground="neutral-weak" textVariant="label-default-s"
+    <Column fillWidth gap="40" horizontal="center">
+      <Row fillWidth gap="16" height={6}>
+        <Background fill
+          shadow="xs"
+          background="neutral-alpha-weak"
+          border="neutral-alpha-medium" radius="l"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+        <Background fill
+          shadow="s"
+          background="neutral-alpha-weak"
+          border="neutral-alpha-medium" radius="l"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+        <Background fill
+          shadow="m"
+          background="neutral-alpha-weak"
+          border="neutral-alpha-medium" radius="l"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+        <Background fill
+          shadow="l"
+          background="neutral-alpha-weak"
+          border="neutral-alpha-medium" radius="l"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+        <Background fill
+          shadow="xl"
+          background="neutral-alpha-weak"
+          border="neutral-alpha-medium" radius="l"
+          lines={{display: true, color: "neutral-alpha-weak"}}/>
+      </Row>
+      <ThemeSwitcher/>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Row shadow="xs"/>
+<Row shadow="s"/>
+<Row shadow="m"/>
+<Row shadow="l"/>
+<Row shadow="xl"/>`,
+      language: "tsx",
+      label: "Shadow"
+    }
+  ]}
+/>
+
+### Opacity
+
+You can set `opacity` from `0` to `100` in steps of `10`.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row fillWidth gap="16" height={6}>
+      <Background fill opacity="0"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="10"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="20"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="30"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="40"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="50"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="60"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="70"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="80"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="90"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill opacity="100"
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<Row opacity="0"/>
+<Row opacity="10"/>
+<Row opacity="20"/>
+<Row opacity="30"/>
+<Row opacity="40"/>
+<Row opacity="50"/>
+<Row opacity="60"/>
+<Row opacity="70"/>
+<Row opacity="80"/>
+<Row opacity="90"/>
+<Row opacity="100"/>`,
+      language: "tsx",
+      label: "Opacity"
+    }
+  ]}
+/>
+
+### Conditionals
+
+Use the `hide` and `show` props to conditionally render elements based on breakpoint.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column fillWidth gap="24" align="center" onBackground="neutral-weak" textVariant="label-default-s">
+      <Background hide="m" fillWidth padding="24" center
+        background="neutral-alpha-weak"
         border="neutral-alpha-medium" radius="l"
         lines={{display: true, color: "neutral-alpha-weak"}}>
         Hidden on / below the "m" breakpoint
       </Background>
-      <Background show="m" fillWidth padding="24" center align="center" onBackground="neutral-weak" textVariant="label-default-s"
+      <Background show="m" fillWidth padding="24" center
+        background="neutral-alpha-weak"
         border="neutral-alpha-medium" radius="l"
         lines={{display: true, color: "neutral-alpha-weak"}}>
         Shown on / above the "m" breakpoint
       </Background>
-    </>
+      You can only see a single block, but there are two here.
+    </Column>
   }
   codeInstances={[
     {
       code:
 `<Row hide="s" hide="m">
-  <Text>Hidden on / below the "m" breakpoint</Text>
+    <Text>Hidden on / below the "m" breakpoint</Text>
 </Row>
 <Row hide="l" show="m">
-  <Text>Shown on / above the "m" breakpoint</Text>
+    <Text>Shown on / above the "m" breakpoint</Text>
 </Row>`,
       language: "tsx",
-      label: "Hide/show"
+      label: "Hide / Show"
     }
   ]}
 />
 
-You can also use the `dark` and `light` props to limit rendering by theme.
+Use the `dark` and `light` props to limit rendering by theme.
 
 <CodeBlock
   marginTop="16"
@@ -947,20 +1151,212 @@ You can also use the `dark` and `light` props to limit rendering by theme.
   ]}
 />
 
-## Interactivity
+### Cursor
 
-- `cursor="interactive"` uses a design tokenized pointer
-- `shadow="m"` applies a predefined elevation
-- `zIndex` is a scale from 0–10
-- `transition="micro-medium"` sets duration presets
+Adjust the cursor with the `cursor` prop. Use the `interactive` value to utilize a tokenized variable for the pointer, so you can update all instances simultaneously.
 
-## Overflow & Opacity
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Row fillWidth gap="24">
+      <Background
+        height={6} padding="16"
+        horizontal="center" vertical="end"
+        onBackground="neutral-weak"
+        textVariant="label-default-s"
+        cursor="interactive"
+        fillWidth
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        Interactive
+      </Background>
+      <Background
+        height={6} padding="16"
+        horizontal="center" vertical="end"
+        onBackground="neutral-weak"
+        textVariant="label-default-s"
+        cursor="text"
+        fillWidth
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        text
+      </Background>
+      <Background
+        height={6} padding="16"
+        horizontal="center" vertical="end"
+        onBackground="neutral-weak"
+        textVariant="label-default-s"
+        cursor="wait"
+        fillWidth
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        wait
+      </Background>
+      <Background
+        height={6} padding="16"
+        horizontal="center" vertical="end"
+        onBackground="neutral-weak"
+        textVariant="label-default-s"
+        cursor="zoom-in"
+        fillWidth
+        background="neutral-alpha-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        zoom-in
+      </Background>
+    </Row>
+  }
+  codeInstances={[
+    {
+      code:
+`<Row cursor="interactive">
+    Interactive
+</Row>
+<Row cursor="text">
+    text
+</Row>
+<Row cursor="wait">
+    wait
+</Row>
+<Row cursor="zoom-in">
+    zoom-in
+</Row>`,
+      language: "tsx",
+      label: "Cursor"
+    }
+  ]}
+/>
+
+
+### zIndex
+
+You can set `zIndex` from `-1` to `10`.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column fillWidth gap="24" textVariant="label-default-s" onBackground="neutral-weak" align="center">
+    <Row fillWidth height={6} style={{isolation: "isolate"}}>
+      <Background fill zIndex="10" style={{marginLeft: "-1rem"}}
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill zIndex="8" style={{marginLeft: "-1rem"}}
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill zIndex="6" style={{marginLeft: "-1rem"}}
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill zIndex="4" style={{marginLeft: "-1rem"}}
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill zIndex="2" style={{marginLeft: "-1rem"}}
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+      <Background fill zIndex="0" style={{marginLeft: "-1rem"}}
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}/>
+    </Row>
+    Based on the HTML, the order should be the opposite, but we reverse it with zIndex.
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Row zIndex="10"/>
+<Row zIndex="8"/>
+<Row zIndex="6"/>
+<Row zIndex="4"/>
+<Row zIndex="2"/>
+<Row zIndex="0"/>`,
+      language: "tsx",
+      label: "zIndex"
+    }
+  ]}
+/>
+
+### Text
+
+Use the `textVariant` prop to apply text styles to children elements. Use the `align` to set their alignment, and the `onBackground` to set their color.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  codePreview={
+    <Column fillWidth gap="16">
+      <Background
+        center padding="16" fillWidth
+        textVariant="display-strong-xs"
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        Display text
+      </Background>
+      <Background
+        center padding="16" fillWidth
+        textVariant="heading-strong-l"
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        Heading text
+      </Background>
+      <Background
+        center padding="16" fillWidth
+        textVariant="body-default-m" onBackground="neutral-weak"
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        Body text
+      </Background>
+      <Background
+        center padding="16" fillWidth
+        textVariant="code-default-m" onBackground="success-weak"
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        Code text
+      </Background>
+      <Background
+        center padding="16" fillWidth
+        textVariant="label-default-s" onBackground="brand-weak"
+        background="neutral-weak"
+        border="neutral-alpha-medium" radius="l"
+        lines={{display: true, color: "neutral-alpha-weak"}}>
+        Label text
+      </Background>
+    </Column>
+  }
+  codeInstances={[
+    {
+      code:
+`<Row zIndex="10"/>
+<Row zIndex="8"/>
+<Row zIndex="6"/>
+<Row zIndex="4"/>
+<Row zIndex="2"/>
+<Row zIndex="0"/>`,
+      language: "tsx",
+      label: "Text"
+    }
+  ]}
+/>
 
 - `overflowX`, `overflowY`, or `overflow`
-- `opacity` from `0` to `100` in steps of `10`
+
+- `transition="micro-medium"` sets duration presets
 
 
-## Responsiveness
+### Responsiveness
 
 Override layout flow with `mobileDirection` or `tabletDirection`.
 
@@ -978,23 +1374,6 @@ Override layout flow with `mobileDirection` or `tabletDirection`.
     }
   ]}
 />
-
-
-## Visibility
-
-Render conditionally with:
-
-- `hide="s"` or `hide="m"`
-- `show="l"` etc.
-- `dark` or `light` props to limit rendering by theme
-
-
-## Typography
-
-Use the `textVariant` prop to apply text styles directly:
-
-- `textVariant="body-default-s"`
-- Align text with `align="center"`
 
 
 ## Composition
